[metadata]
name = graphql-example
version = 0.1.4
description = A simple graphql server
long_description = file: README.rst
author = Stephan Fitzpatrick
author_email = knowsuchagency@gmail.com
url = https://github.com/knowsuchagency/graphql-example
license = MIT license
keywords = graphql-example
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner

[flake8]
exclude = docs

[aliases]
test = pytest
